# youbot_arm_kinematics

./: .gitattributes  CMakeLists.txt  README.md  package.xml  setup.py
include/: kinematics.h
launch/: fk.launch  fk2.launch  ik.launch  just_arm.launch  youbot_arm_model.launch  youbot_arm_model_dh.launch  youbot_arm_model_dh_ik.launch
rviz/: youbot_arm_model.rviz  youbot_arm_model_default.rviz  youbot_arm_model_dh.rviz
scripts/: fk_test  fk_test.py  ik_client.py  ik_server.py  ik_test  ik_test_arm  ik_test_real  ik_test_trajectory  ik_test_trajectory_real  trajectories_model.txt  trajectories_model_xyz.txt  you_node.py
src/: config.py  fk_test_node.cpp  ik_test_node.cpp  jacobi.cpp  kinematics.cpp  kinematics.py  ploter.py
src/youbot_arm_kinematics/: dh_parameters.py  kinematics.py
srv/: IK.srv
