<?xml version="1.0"?>
<package format="2">
  <name>youbot_arm_kinematics</name>
  <version>0.1.0</version>

  <description>
    The youbot_arm_kinematics package using Denavit-Hartenberg convention.
  </description>

  <maintainer email="antonovspostbox@gmail.com">Evgeniy Antonov</maintainer>
  <maintainer email="kaartemov@gmail.com">Artemov Kirill</maintainer>

  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/youbot_arm_kinematics</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
